--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   sqflite: ^2.2.8+4
+  sqflite_common_ffi: ^2.3.2
   path_provider: ^2.0.15
-  intl: ^0.18.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
