--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,8 @@
 name: khatma_flutter
-description: Une application pour suivre la lecture du Coran selon le programme "Khatma de l'Administration".
+description: حزب الإدارة - Une application pour suivre la lecture du Coran selon le programme "Khatma de l'Administration".
 publish_to: 'none'
 
 version: 1.0.0+1
-
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
@@ -17,6 +16,11 @@ dependencies:
   path_provider: ^2.0.15
   intl: ^0.20.2 # Version mise à jour pour compatibilité
   provider: ^6.0.5 # Ajout pour la gestion de l'état de la locale
+  # PDF viewer qui fonctionne sur toutes les plateformes (supprimé car on utilise les images maintenant)
+  # syncfusion_flutter_pdfviewer: ^30.1.42
+  url_launcher: ^6.3.2
+  share_plus: ^11.0.0
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +40,8 @@ flutter:
   assets:
     - assets/images/
     - assets/icon/
+    - assets/khatma/
+    - assets/khatma/khatma.pdf
 
 flutter_intl:
   enabled: true
